[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = "0.4.31"
clap = "3"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
webrtc = "0.9.0"
signal = { path = "../signal" }
